Subindo primeiras alteracoes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+#Config para Mysql
+#spring.datasource.url= jdbc:mysql://localhost:3309/combustivel?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=123456
 
+#spring.datasource.tomcat.test-while-idle=true
+#spring.datasource.tomcat.validation-query=SELECT 1
+#
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+
+#Config para H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/test2
+spring.datasource.username=saa
+spring.datasource.password=
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.continue-on-error=true
