--- a/pom.xml
+++ b/pom.xml
@@ -91,12 +91,19 @@
 			<version>2010-12-19</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>commons-codec</groupId>-->
+<!--			<artifactId>commons-codec</artifactId>-->
+<!--			<version>1.13</version>-->
+<!--		</dependency>-->
+
 		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.9</version>
+			<version>1.14</version>
 		</dependency>
+
 
 
 		<dependency>
